# dimikave-sam-projects

./: .gitignore  .pre-commit-config.yaml  README.md  custom_sam_build.py  pyproject.toml
nasa-lambdas/: README.md  openai_integration_test.py  samconfig.toml  sendgrid_apod_integration_test.py  template.yaml
nasa-lambdas/send-apod-email/src/: send_apod_email.py
nasa-lambdas/sendgrid-send-apod-email/src/: requirements.txt  sendgrid_apod_email_constants.py  sendgrid_email_templates.py  sendgrid_send_apod_email.py
nasa-lambdas/sendgrid-send-apod-email/tests/: test_sendgrid_apod_email_utils.py
nasa_lambdas/: template.yaml
nasa_lambdas/apod_instagram_comment_responder/src/: apod_instagram_comment_responder.py
nasa_lambdas/sendgrid_send_apod_email/events/: test-event.json
nasa_lambdas/sendgrid_send_apod_email/src/: sendgrid_apod_email_constants.py  sendgrid_apod_email_enumerations.py  sendgrid_apod_email_utils.py  sendgrid_send_apod_email.py
nasa_lambdas/sendgrid_send_apod_email/tests/: test_sendgrid_apod_email_utils.py
philosophy/: README.md  samconfig.toml  template.yaml
shared/auxiliary_tools/: pyproject.toml
shared/auxiliary_tools/src/: environment_constants.py  environment_utils.py
shared/auxiliary_tools/tests/: test_environment_utils.py
spotify-enhancer/: README.md  template.yaml
spotify-enhancer/api/: openapi.yaml
spotify_enhancer/: README.md  get_access_token.py  samconfig.toml  template.yaml
test-scripts/: get_philosophers_by_scrapping.py  openai_tester.py  sendgrid_apod_integration_test.py
(+6 files in other folders)
