[tool.poetry]
name = "dimikave-sam-projects"
version = "0.1.0"
description = "Projects / Automations with AWS SAM - dimikave platform"
authors = ["Dimitris Kavelidis <dimitris.kave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
boto3 = "^1.35.40"
pytest = "^8.3.3"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"