[tool.poetry]
name = "auxiliary-tools"
version = "0.1.0"
description = "A package containing auxiliary tools, constants and enumerations."
authors = ["Dimitris Kavelidis <dimitris.kave@gmail.com>"]
packages = [{ include = "*.py", from = "src", to = "auxiliary_tools" }]

[tool.poetry.dependencies]
python = "~3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
